Fix z-index for mobile dropdown [SCI-8594] (#5547)

--- a/app/assets/stylesheets/my_modules/results/index.scss
+++ b/app/assets/stylesheets/my_modules/results/index.scss
@@ -11,7 +11,11 @@
   display: flex;
 
   .dropdown-menu {
-    z-index: 9;
+    z-index: 102;
+  }
+
+  .dropdown-backdrop {
+    z-index: 101;
   }
 
   .add-result-dropdown {
