--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -762,7 +762,11 @@ li.module-hover {
             top: .2em;
 
             .dropdown-menu {
-              z-index: 9;
+              z-index: 102;
+            }
+
+            .dropdown-backdrop {
+              z-index: 101;
             }
 
             .project-actions-menu {
